--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "gh-pages": "^6.2.0",
  
    
+  "lucide-react": "^0.562.0",
+ 
+   
   "react": "^18.3.1",
  
    
@@ -54,6 +57,9 @@
  
    
   "react-scripts": "5.0.1",
+ 
+   
+  "recharts": "^3.6.0",
  
    
   "use-sound": "^4.0.3",
